# prueba_trader

./: CMakeLists.txt  README.md  build_and_run.sh  consigna.md
src/: cmdArgs.cc  main.cc
src/include/: cmdArgs.h  utils.h
